[gd_scene load_steps=10 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://InputSet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://OpenDyslexic-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.964706, 0.556863, 0.372549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=4]
size = 12
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 25
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.501961, 0.607843, 0.807843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 15
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 47.0

[node name="AgeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 192.0
margin_bottom = 44.0
text = "Enter Age: "
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 430.0
margin_bottom = 47.0
size_flags_horizontal = 13
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
text = "16"
align = 1
max_length = 3
expand_to_text_length = true
placeholder_text = "11"
placeholder_alpha = 0.178
caret_blink = true

[node name="ExportButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 434.0
margin_right = 949.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Export Score to Downloads"

[node name="Info" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 953.0
margin_right = 1004.0
margin_bottom = 47.0
size_flags_horizontal = 5
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = " i "

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 1004.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 992.0
margin_bottom = 6650.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
text = "Created by Iniyan Joseph using Godot Engine"
align = 2

[node name="Title" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 992.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Sensory Profile Calculator
Adolescent/Adult"
align = 1

[node name="ALabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 992.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "A. Taste/Smell Processing"
valign = 1

[node name="ABox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 992.0
margin_bottom = 1008.0

[node name="1" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 100.0
question = "I leave or move on to another section when i smell a strong odor in a store (for example, bath products, candles, perfumes)"

[node name="2" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 992.0
margin_bottom = 204.0
question = "I add spice to my food"

[node name="3" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 992.0
margin_bottom = 308.0
question = "I don't smell things that other people say they smell"

[node name="4" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 992.0
margin_bottom = 412.0
question = "I enjoy being close to people who wear perfume or cologne"

[node name="5" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 516.0
question = "I only eat familiar foods"

[node name="6" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 520.0
margin_right = 992.0
margin_bottom = 620.0
question = "Many foods taste bland to me (in other words, food tastes plain or does not have a lot of flavor)"

[node name="7" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 624.0
margin_right = 992.0
margin_bottom = 724.0
question = "I don't like strong tasting mints or candies (for example, hot/cinnamon or sour candy)"

[node name="8" parent="VBoxContainer/ScrollContainer/VBoxContainer/ABox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 728.0
margin_right = 992.0
margin_bottom = 828.0
question = "I go over to smell fresh flowers when I see them"

[node name="BLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 1012.0
margin_right = 992.0
margin_bottom = 1062.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "B. Movement Processing"

[node name="BBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 1066.0
margin_right = 992.0
margin_bottom = 1894.0

[node name="9" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 100.0
question = "I am afraid of heights"

[node name="10" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 992.0
margin_bottom = 204.0
question = "I enjoy how it feels to move about (for example, dancing, running)"

[node name="11" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 992.0
margin_bottom = 308.0
question = "I avoid elevators and/or escalators because I dislike the movement"

[node name="12" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 992.0
margin_bottom = 412.0
question = "I trip or bump into things"

[node name="13" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 516.0
question = "I dislike the movement of riding in a car"

[node name="14" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 520.0
margin_right = 992.0
margin_bottom = 620.0
question = "I choose to engage in physical activities"

[node name="15" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 624.0
margin_right = 992.0
margin_bottom = 724.0
question = "I am unsure of footing when walking on stairs (for example, I trip, lose balance, and/or need to hold the rail)"

[node name="16" parent="VBoxContainer/ScrollContainer/VBoxContainer/BBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 728.0
margin_right = 992.0
margin_bottom = 828.0
question = "I become dizzy easily (for example, after bending over, getting up too fast)"

[node name="CLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 1898.0
margin_right = 992.0
margin_bottom = 1939.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "C. Visual Processing"

[node name="CBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 1943.0
margin_right = 992.0
margin_bottom = 2979.0

[node name="17" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 100.0
question = "I like to go to places that have bright lights and that are colorful"

[node name="18" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 992.0
margin_bottom = 204.0
question = "I keep the shades down during the day when I am home"

[node name="19" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 992.0
margin_bottom = 308.0
question = "I like to wear colorful clothing"

[node name="20" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 992.0
margin_bottom = 412.0
question = "I become frustrated when trying to find something in a crowded drawer or messy room"

[node name="21" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 516.0
question = "I miss the street, building, or room signs when trying to go somewhere new"

[node name="22" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 520.0
margin_right = 992.0
margin_bottom = 620.0
question = "I am bothered by unsteady or fast moving visual images in movies or TV"

[node name="23" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 624.0
margin_right = 992.0
margin_bottom = 724.0
question = "I don't notice when people come into the room"

[node name="24" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 728.0
margin_right = 992.0
margin_bottom = 828.0
question = "I choose to shop in smaller stores because I am overwhelmed in large stores"

[node name="25" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 832.0
margin_right = 992.0
margin_bottom = 932.0
question = "I become bothered when I see lots of movement around me (for example, at a busy mall, parade, carnival)"

[node name="26" parent="VBoxContainer/ScrollContainer/VBoxContainer/CBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 936.0
margin_right = 992.0
margin_bottom = 1036.0
question = "I limit distractions when I am working (for example, I close the door, or turn off the TV)"

[node name="DLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 2983.0
margin_right = 992.0
margin_bottom = 3024.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "D. Touch Processing"

[node name="DBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 3028.0
margin_right = 992.0
margin_bottom = 4376.0

[node name="27" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 100.0
question = "I dislike having my back rubbed"

[node name="28" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 992.0
margin_bottom = 204.0
question = "I like how it feels to get my hair cut"

[node name="29" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 992.0
margin_bottom = 308.0
question = "I avoid or wear gloves during activities that will make my hands messy"

[node name="30" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 992.0
margin_bottom = 412.0
question = "I touch others when I am talking (for example, I put my hand on their shoulder or shake their hands)"

[node name="31" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 516.0
question = "I am bothered by the feeling in my mouth when I wake up in the morning"

[node name="32" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 520.0
margin_right = 992.0
margin_bottom = 620.0
question = "I like to go barefoot"

[node name="33" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 624.0
margin_right = 992.0
margin_bottom = 724.0
question = "I am uncomfortable wearing certain fabrics (for example, wool, silk, corduroy, tags in clothing)"

[node name="34" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 728.0
margin_right = 992.0
margin_bottom = 828.0
question = "I don't like particular food textures (for example, peaches with skin, applesauce, cottage cheese, chunky peanut butter)"

[node name="35" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 832.0
margin_right = 992.0
margin_bottom = 932.0
question = "I move away when others get too close to me"

[node name="36" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 936.0
margin_right = 992.0
margin_bottom = 1036.0
question = "I don't seem to notice when my face or hands are dirty"

[node name="37" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1040.0
margin_right = 992.0
margin_bottom = 1140.0
question = "I get scrapes or bruises, but don't remember how I got them."

[node name="38" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1144.0
margin_right = 992.0
margin_bottom = 1244.0
question = "I avoid standing in lines or standing close to other people because I don't like to get too close to others"

[node name="39" parent="VBoxContainer/ScrollContainer/VBoxContainer/DBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1248.0
margin_right = 992.0
margin_bottom = 1348.0
question = "I don't seem to notice when someone touches my arm or back"

[node name="ELabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 4380.0
margin_right = 992.0
margin_bottom = 4421.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "E. Activity Level"

[node name="EBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 4425.0
margin_right = 992.0
margin_bottom = 5461.0

[node name="40" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 100.0
question = "I work on two or more tasks at the same time"

[node name="41" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 992.0
margin_bottom = 204.0
question = "It takes me more time than other people to wake up in the morning"

[node name="42" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 992.0
margin_bottom = 308.0
question = "I do things on the spur of the moment (in other words I do things without making a plan ahead of time)"

[node name="43" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 992.0
margin_bottom = 412.0
question = "I find time to get away from my busy life and spend time by myself"

[node name="44" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 516.0
question = "I see slower than others when trying to follow an activity or task"

[node name="45" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 520.0
margin_right = 992.0
margin_bottom = 620.0
question = "I don't get jokes as quickly as others"

[node name="46" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 624.0
margin_right = 992.0
margin_bottom = 724.0
question = "I stay away from crowds"

[node name="47" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 728.0
margin_right = 992.0
margin_bottom = 828.0
question = "I find activities to perform in front of others (for example, music, sports, acting, public speaking, and answering questions in class)"

[node name="48" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 832.0
margin_right = 992.0
margin_bottom = 932.0
question = "I find it hard to concentrate for the whole time when sitting in a long class or a meeting"

[node name="49" parent="VBoxContainer/ScrollContainer/VBoxContainer/EBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 936.0
margin_right = 992.0
margin_bottom = 1036.0
question = "I avoid situations where unexpected things might happen (for example, going to unfamiliar places or being around people I don't know)
"

[node name="FLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 5465.0
margin_right = 992.0
margin_bottom = 5506.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "F. Auditory Processing"

[node name="FBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 5510.0
margin_right = 992.0
margin_bottom = 6650.0

[node name="50" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 992.0
margin_bottom = 100.0
question = "I hum, whistle, sing, or make other noises"

[node name="51" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 992.0
margin_bottom = 204.0
question = "I startle easily at unexpected or loud noises (for example, vacuum cleaner, dog barking, telephone ringing)"

[node name="52" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 992.0
margin_bottom = 308.0
question = "I have trouble following what people are saying when they talk fast or about unfamilliar topics"

[node name="53" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 992.0
margin_bottom = 412.0
question = "I leave the room when others are watching TV or ask them to turn it down"

[node name="54" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 516.0
question = "I am distracted if there is a lot of noise around"

[node name="55" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 520.0
margin_right = 992.0
margin_bottom = 620.0
question = "I don't notice when my name is called"

[node name="56" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 624.0
margin_right = 992.0
margin_bottom = 724.0
question = "I use strategies to drown out sound (for example, close the door, cover my ears, wear earplugs)"

[node name="57" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 728.0
margin_right = 992.0
margin_bottom = 828.0
question = "I stay away from noisy settings"

[node name="58" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 832.0
margin_right = 992.0
margin_bottom = 932.0
question = "I like to attend events with alot of music"

[node name="59" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 936.0
margin_right = 992.0
margin_bottom = 1036.0
question = "I have to ask people to repeat things"

[node name="60" parent="VBoxContainer/ScrollContainer/VBoxContainer/FBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1040.0
margin_right = 992.0
margin_bottom = 1140.0
question = "I find it difficult to work with background noise (for example, fan, radio)"

[node name="InfoDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
custom_colors/title_color = Color( 0, 0, 0, 1 )
custom_styles/panel = SubResource( 7 )
popup_exclusive = true
window_title = "Info"

[node name="VBoxContainer" type="VBoxContainer" parent="InfoDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="InfoDialog/VBoxContainer"]
margin_right = 512.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Use the Slider to Indicate your Response "
align = 1
autowrap = true

[node name="Label" type="Label" parent="InfoDialog/VBoxContainer"]
margin_top = 89.0
margin_right = 512.0
margin_bottom = 241.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "1- Almost Never
2- Seldom
3- Occasionally
4 - Frequently
5 - Almost Always"
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Info" to="." method="_on_Info_pressed"]
